# outgoing

./: CHANGELOG.md  README.rst  SPEC.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test.yml
docs/: changelog.rst  command.rst  conf.py  configuration.rst  ext-utilities.rst  extensions.rst  index.rst  pyapi.rst  writing-exts.rst
src/outgoing/: __init__.py  __main__.py  config.py  core.py  errors.py  passwords.py  util.py
src/outgoing/senders/: command.py  mailboxes.py  mbox.py  null.py  smtp.py
test/: conftest.py  test_babyl.py  test_command.py  test_config.py  test_from_config_file.py  test_from_dict.py  test_lookup_netrc.py  test_maildir.py  test_main.py  test_mbox.py  test_mh.py  test_mmdf.py  test_netrc.py  test_passwords.py  test_smtp.py  test_util.py  testing_lib.py
test/data/: Hunter2Keyring.py
test/test_config/: test_netrc_config.py  test_password.py  test_paths.py
test/test_passwords/: test_base64.py  test_basics.py  test_dotenv.py  test_env.py  test_file.py  test_keyring.py
test/test_senders/: test_babyl.py  test_command.py  test_maildir.py  test_mbox.py  test_mh.py  test_mmdf.py  test_null.py  test_smtp.py  testing_lib.py
