[metadata]
name = outgoing
version = attr:outgoing.__version__
description = Abstract interface for different e-mail methods
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = outgoing@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/jwodder/outgoing

keywords =
    ###

classifiers =
    Development Status :: 3 - Alpha
    #Development Status :: 4 - Beta
    #Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    ###
    Typing :: Typed

project_urls =
    Source Code = https://github.com/jwodder/outgoing
    Bug Tracker = https://github.com/jwodder/outgoing/issues

[options]
packages = find:
package_dir =
    =src
include_package_data = True
python_requires = ~=3.6
install_requires =
    appdirs     ~= 1.4
    entrypoints ~= 0.3
    pydantic    ~= 1.7
    toml
    typing_extensions; python_version < "3.8"

[options.packages.find]
where = src

[options.entry_points]
#console_scripts =
#    outgoing = outgoing.__main__:main
outgoing.senders =
    command = outgoing.senders.command:CommandSender
    mbox = outgoing.senders.mbox:MboxSender
    null = outgoing.senders.mbox:NullSender
    smtp = outgoing.senders.smtp.SMTPSender

[mypy]
ignore_missing_imports = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
no_implicit_optional = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
local_partial_types = True
no_implicit_reexport = True
strict_equality = True
show_error_codes = True
show_traceback = True
pretty = True
