[metadata]
name = outgoing
version = attr:outgoing.__version__
description = Common interface for multiple e-mail methods
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = outgoing@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/jwodder/outgoing

keywords =
    e-mail
    email
    mailbox
    mbox
    send mail
    sendmail
    smtp

classifiers =
    Development Status :: 4 - Beta
    #Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Topic :: Communications :: Email
    Typing :: Typed

project_urls =
    Source Code = https://github.com/jwodder/outgoing
    Bug Tracker = https://github.com/jwodder/outgoing/issues
    Documentation = https://outgoing.readthedocs.io

[options]
packages = find:
package_dir =
    =src
include_package_data = True
python_requires = ~=3.6
install_requires =
    appdirs        ~= 1.4
    click          >= 7.0
    click-loglevel ~= 0.2
    entrypoints    ~= 0.3
    keyring        >= 21.7
    morecontext    ~= 0.4
    pydantic       ~= 1.7
    python-dotenv  ~= 0.11
    toml
    typing_extensions; python_version < "3.8"

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    outgoing = outgoing.__main__:main

outgoing.senders =
    babyl = outgoing.senders.mailboxes:BabylSender
    command = outgoing.senders.command:CommandSender
    maildir = outgoing.senders.mailboxes:MaildirSender
    mbox = outgoing.senders.mailboxes:MboxSender
    mh = outgoing.senders.mailboxes:MHSender
    mmdf = outgoing.senders.mailboxes:MMDFSender
    null = outgoing.senders.null:NullSender
    smtp = outgoing.senders.smtp:SMTPSender

outgoing.password_schemes =
    dotenv = outgoing.passwords:dotenv_scheme
    base64 = outgoing.passwords:base64_scheme
    env = outgoing.passwords:env_scheme
    file = outgoing.passwords:file_scheme
    keyring = outgoing.passwords:keyring_scheme

[mypy]
ignore_missing_imports = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
no_implicit_optional = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
local_partial_types = True
strict_equality = True
show_error_codes = True
show_traceback = True
pretty = True
# <https://github.com/pallets/click/issues/1879>:
no_implicit_reexport = False
