[metadata]
name = outgoing
version = attr:outgoing.__version__
description = Common interface for multiple e-mail methods
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = outgoing@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/jwodder/outgoing

keywords =
    e-mail
    email
    mailbox
    mbox
    send mail
    sendmail
    smtp

classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Topic :: Communications :: Email
    Typing :: Typed

project_urls =
    Source Code = https://github.com/jwodder/outgoing
    Bug Tracker = https://github.com/jwodder/outgoing/issues
    Documentation = https://outgoing.readthedocs.io

[options]
packages = find:
package_dir =
    =src
include_package_data = True
python_requires = >=3.7
install_requires =
    click          >= 7.0
    click-loglevel ~= 0.2
    importlib-metadata >= 3.6; python_version < "3.10"
    keyring        >= 21.7
    morecontext    ~= 0.4
    platformdirs   ~= 2.1
    pydantic       ~= 1.7
    python-dotenv  ~= 0.11
    tomli          >= 1.2, < 3.0
    typing_extensions; python_version < "3.8"

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    outgoing = outgoing.__main__:main

outgoing.senders =
    babyl = outgoing.senders.mailboxes:BabylSender
    command = outgoing.senders.command:CommandSender
    maildir = outgoing.senders.mailboxes:MaildirSender
    mbox = outgoing.senders.mailboxes:MboxSender
    mh = outgoing.senders.mailboxes:MHSender
    mmdf = outgoing.senders.mailboxes:MMDFSender
    null = outgoing.senders.null:NullSender
    smtp = outgoing.senders.smtp:SMTPSender

outgoing.password_schemes =
    dotenv = outgoing.passwords:dotenv_scheme
    base64 = outgoing.passwords:base64_scheme
    env = outgoing.passwords:env_scheme
    file = outgoing.passwords:file_scheme
    keyring = outgoing.passwords:keyring_scheme

[mypy]
allow_incomplete_defs = False
allow_untyped_defs = False
ignore_missing_imports = True
# <https://github.com/python/mypy/issues/7773>:
no_implicit_optional = True
implicit_reexport = False
local_partial_types = True
pretty = True
show_error_codes = True
show_traceback = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
plugins = pydantic.mypy

[pydantic-mypy]
init_forbid_extra = True
warn_untypes_fields = True
